# patternUnfolding

.github/: copilot-instructions.md
app/: .dockerignorefile  README.md
app/data/: eye_of_the_world.json  great_hunt.json  pattern.json  updated_pattern.json
app/lambdas/CatalogUserContent/: build.gradle.kts  settings.gradle.kts
app/lambdas/FetchPresignedS3Url/: build.gradle.kts  settings.gradle.kts
app/lambdas/FetchUserUploadedContent/: build.gradle.kts  settings.gradle.kts
app/lambdas/addNewUserContent/: docker-compose.yml  dockerfile  pyproject.toml
app/lambdas/addNewUsertoDDB/: pyproject.toml
app/lambdas/contactUsSES/: README.md  dockerfile  pyproject.toml
app/lambdas/fetchProfileInfo/: dockerfile  pyproject.toml
app/lambdas/presignedS3Url/: docker-compose.yml  dockerfile  pyproject.toml
app/lambdas/presignedS3Url/src/: presigned_url.py
app/lambdas/storyUpload/: README.md  dockerfile  pyproject.toml
app/lambdas/storyUpload/src/: lambda_function.py
app/src/: lambda_function.py
app/src/build_scripts/: build.py
app/src/commons/: fetch_names.py
app/src/connectors/: connection_factory.py  connection_strategy.py  new_person_strategy.py  person_to_person_strategy.py  place_to_persons_strategy.py  thing_to_person.py  update_person_strategy.py
app/src/data_access/: data_access_service.py
app/src/exceptions/: log_exceptions.py
app/src/handlers/: people_handler.py
app/src/node_creators/: node_creator_strategy.py  person_json_node_creator.py  place_json_node_creator.py  (+1 more)
webUI/: .eslintrc  README.md  package-lock.json  package.json
webUI/public/: index.html  manifest.json
webUI/src/: App.jsx  App.module.css  index.css
webUITS/: package-lock.json  package.json  tsconfig.json
webUITS/public/: index.html  manifest.json
webUITS/src/: App.tsx  commonTypes.d.ts  react-app-env.d.ts  rss-feed.xml
(+231 files in other folders)
